--- a/.gitignore
+++ b/.gitignore
@@ -52,11 +52,11 @@ coverage.xml
 cover/
 
 # Translations
-*.mo
-*.pot
+# *.mo
+# *.pot
 
 # Django stuff:
-*.log
+# *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
